objects/nCHECK__Grading_Criteria__mdt.object
<CustomObject>
    <fields>
        <fullName>nCHECK__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCHECK__Controlling_Field__c</fullName>
        <label>Controlling Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Controlling_Value__c</fullName>
        <label>Controlling Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCHECK__Grading_Step__c</fullName>
        <label>Grading Step</label>
        <referenceTo>nCHECK__Grading_Step__mdt</referenceTo>
        <relationshipLabel>Grading Criterias</relationshipLabel>
        <relationshipName>Grading_Criterias</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>nCHECK__Step__c</fullName>
        <label>Step</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nCHECK__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Grading Criteria</label>
    <pluralLabel>Grading Criterias</pluralLabel>
</CustomObject>